--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
     <meta property="og:description" content="Découvrez mes projets et compétences en développement web.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://issa-kamara.netlify.app">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="%PUBLIC_URL%/styles.css">
     <link rel="shortcut icon" href="chOrgIcon.jpg" type="image/x-icon">
 </head>
